tests/compile-fail/integration__integration__type_check__diffswitch.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:10:20
   │
10 │         int x = 3::4.5:;               // arg
   │                 ---^^^-
   │                 │  │
   │                 │  a float
   │                 same types required by this
   │                 an integer

error: type error
   ┌─ <input>:11:19
   │
11 │         float a = 3:4::4;              // out
   │         -----     ^^^^^^ an integer
   │         │          
   │         expects a float

error: type error
   ┌─ <input>:12:17
   │
12 │         int y = ins_0():::;            // void expr
   │                 ^^^^^^^---
   │                 │
   │                 expects a value
   │                 void type

error: type error
   ┌─ <input>:13:32
   │
13 │         int z = (3.0:4.0:3.0 + 1:5.0); // interior
   │                          --- - ^ an integer
   │                          │   │  
   │                          │   same types required by this
   │                          a float

error: type error
   ┌─ <input>:14:10
   │
14 │         (ins_0():::);                  // void stmt
   │         -^^^^^^^----
   │         ││
   │         │void type
   │         expects a value


